--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -56,7 +56,7 @@
                     <div class="comments">
                         
                     </div>
-                    <p>@Model.Comments.Where(x => x.PostID == post.ID).Count()</p>
+                    <p class="commentCount">@Model.Comments.Where(x => x.PostID == post.ID).Count()</p>
                 </a>
             </div>
             </li>
