--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <body>
 <header class="parentNavBarContainer">
     <div class="div1NavBar">
-        <form method="get" asp-page="/index" id="searchbar">
+        <form method="get" asp-page="Index" id="searchbar">
             <input type="text" name="search" placeholder="Search for profile" autocomplete="off">
             <label>
                 <button type="submit"></button>
