--- a/Project Hashtag/Pages/ProfileSettings.cshtml
+++ b/Project Hashtag/Pages/ProfileSettings.cshtml
@@ -5,4 +5,6 @@
 
 <div id="ProfileSettingsDiv">
     <h1>Edit Profile</h1>
+    <p>@Model.User.Name</p>
+    <img src="@Model.User.Avatar"/>
 </div>
