--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -259,6 +259,24 @@ Below is flow styling
     transition: all 200ms ease;
 }
 
+.image {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: clamp(50px, 100%, 500px);
+    border: 1px solid  grey;
+    border-radius: 10px;
+    background-color: #1f2023;
+}
+
+.image img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px;
+}
+
 .postText {
     width: 80%;
     margin: auto;
