--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -233,6 +233,12 @@ Below is flow styling
     border-radius: 20px;
 }
 
+.pic-top {
+    width: 40px;
+    height: 20px;
+    border-radius: 20px;
+}
+
 .postProfile p {
     font-size: 12px;
     opacity: 0.8;
