--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -235,8 +235,9 @@ Below is flow styling
 
 .pic-top {
     width: 40px;
-    height: 20px;
-    border-radius: 20px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .postProfile p {
@@ -271,16 +272,16 @@ Below is flow styling
     justify-content: center;
     align-items: center;
     margin: auto;
-    height: clamp(50px, 100%, 500px);
+    height: clamp(100px, 100%, 500px);
     border: 1px solid  grey;
     border-radius: 10px;
     background-color: #1f2023;
+    overflow: hidden;
 }
 
 .image img {
     max-width: 100%;
     max-height: 100%;
-    border-radius: 10px;
 }
 
 .postText {
