--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -115,6 +115,9 @@ button[type="submit"]:hover {
     text-decoration:none;
     justify-content: center;
 }
+.div3NavBar img {
+    margin-left:7px;
+}
 
 .div3NavBar > a:hover {
     opacity: 0.7;
@@ -230,19 +233,10 @@ Below is flow styling
     border-radius: 20px;
 }
 
-.image-cropper {
-    width: 40px;
-    height: 40px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
 .pic-top {
-    display: inline;
-    margin: 0 auto;
-    height: auto;
-    width: 100%;
+    width: 40px;
+    height: 20px;
+    border-radius: 20px;
 }
 
 .postProfile p {
