post field changes

--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -20,8 +20,10 @@
                     <img src="~/hashtag.png" />
                     <input type="text" name="tag" />
                 </div>
+                <p class="imageText">Picture: </p>
                 <label id="addPic">
-                    <input type="file" name="photo">
+                    <input type="file" name="photo" id="photo-input">
+                    <span id="file-label"></span>
                 </label>
                 <button type="submit">Post</button>
             </div>
