--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -18,7 +18,7 @@
                 <div id="addTag">
                     <p>Tag </p>
                     <img src="~/hashtag.png" />
-                    <input type="text" name="tag" />
+                    <input type="text" name="tag" autocomplete="off"/>
                 </div>
                 <p class="imageText">Picture: </p>
                 <label id="addPic">
