--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -182,6 +182,12 @@ Add new post styling
     padding-top: 0.5em;
     border-top: grey solid 1px;
     margin-left: 4.5em;
+    position: relative;
+}
+
+#addPostBottom button {
+    position: absolute;
+    right: 1em;
 }
 
 #addPostBottom .imageText {
@@ -202,7 +208,19 @@ Add new post styling
     background-repeat: no-repeat;
     transition: all 200ms ease;
     position: relative;
+}
 
+#file-label {
+    position: absolute;
+    top: -5px;
+    right: -9px;
+    width: 20px;
+    height: 20px;
+}
+
+#file-label img {
+    width: 100%;
+    height: 100%;
 }
 
 #addPic:hover {
