--- a/Project Hashtag/Pages/ProfileSettings.cshtml
+++ b/Project Hashtag/Pages/ProfileSettings.cshtml
@@ -6,10 +6,12 @@
 <div id="ProfileSettingsDiv">
     <h1>Edit Profile</h1>
     <p>@Model.User.Name<img src="@Model.User.Avatar" width="40px"/></p>
-    <form>
+    <form method="post" asp-page-handler="biography">
         
         <label for="bio">Biography</label>
-        <input id="bio" type="text" value="@Model.User.Biography"></input>
+        <input hidden name="userId" value="@Model.User.ID">
+        <textarea name="content" id="bio" type="text">@Model.User.Biography</textarea>
+        <button type="submit">Update bio</button>
     </form>
     
     <h3>Choose a new profile picture: </h3>
