--- a/Project Hashtag/Pages/Search.cshtml
+++ b/Project Hashtag/Pages/Search.cshtml
@@ -53,6 +53,13 @@
                 </div>
                 <p>@comment.Text </p>
                 <p>@comment.TimeSinceComment()</p>
+                if (comment.UserID == Model.LoggedIn.LoggedInAccountID)
+                {
+                    <form method="post" asp-page-handler="DeleteComment" asp-route-commentId="@comment.Id">
+                        <input type="hidden" name="search" value="@Request.Query["search"]" />
+                        <button type="submit">Delete</button>
+                    </form>
+                }
 
             }
             <form method="post" asp-page-handler="comment" asp-route-postID="@post.ID">
