--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -105,8 +105,9 @@
                 <p>@comment.TimeSinceComment()</p>
 
             }
-            <form method="post" asp-page-handler="comment" asp-route-id="@post.ID">
-                <input type="text" name="content">
+            <form method="post" asp-page-handler="comment" asp-route-id="@post.ID" id="postComment">
+                <img class="pic-top" src="@Model.database.Users.Single(x => x.ID == @Model.LoggedIn.LoggedInAccountID).Avatar" alt="error">
+                <textarea required name="content" placeholder="Add a comment..." rows="1" oninput="autoExpand(this)"></textarea>
                 <input hidden name="userId" value="@post.UserID">
                 <button type="submit">Comment</button>
             </form>
